Mon Nov 02 03:14:55 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/cachemanager.py,xappy/indexerconnection.py,
	  xappy/searchconnection.py: Initial implementation of pre-cached
	  searches.  Uses the value slots to hold information about the
	  ranks assigned by the pre-cached searches, which is relatively
	  inefficient on flint.
	* xappy/unittests/cachemanager.py: Test of the cachemanager
	  implemetnation.
	* xappy/unittests/cached_searches.py: Test that searches using the
	  cachemanager work correctly.

Sun Nov 01 21:10:10 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py,xappy/unittests/docids.py: Allow a
	  Xapian document ID to be specified to the add(), replace(), and
	  delete() methods. 

Sun Nov 01 21:07:32 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* test.py: Skip test modules which depend on missing modules,
	  displaying an appropriate message. 

Sun Nov 01 21:01:54 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update branchpoint revision numbers.

Mon Sep 07 08:13:30 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Fix wildcard support; was omitting
	  a "self" when looking for the wildcard flags.

Fri Sep 04 14:04:00 GMT 2009  Charlie Hull <charlie@flax.co.uk>

	* libs/build_xapian_win32.bat: new file to assist building under
	  Win32.

Thu Sep 03 12:05:34 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Fix
	  SearchConnection._get_freetext_fields - not sure we want to keep
	  this (it's not public, or called from anywhere), but might as
	  well make it work while we decide.

Tue Sep 01 13:53:06 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Updated packages with fixed windows build
	  system (hopefully).

Wed Aug 26 08:42:59 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
