@@ -1,3 +1,8 @@
+Mon Nov 02 03:28:35 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py: Pass the xappy.Query to the
+	  SearchResults object, not the xapian Query.
+
 Mon Nov 02 03:14:55 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/cachemanager.py,xappy/indexerconnection.py,
